<resources>
    <string name="app_name">syed_zulqarnain_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_4_12_19">4/12/19</string>
<string name="lbl_mohalla">Mohalla</string>
<string name="msg_reason_for_refu">Reason for Refusal</string>
<string name="lbl_m">M</string>
<string name="lbl_ethnicity">Ethnicity</string>
<string name="lbl_s">S</string>
<string name="lbl_t">T</string>
<string name="lbl_w">W</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_separated">Separated</string>
<string name="msg_vaccination_sta">Vaccination Status *</string>
<string name="msg_structure_profi">Structure Profile</string>
<string name="lbl_punjabi">Punjabi</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="msg_structure_numbe">Structure Number</string>
<string name="lbl_01_04_2019">01/04/2019</string>
<string name="lbl_pneumo_3">Pneumo-3</string>
<string name="lbl_pneumo_2">Pneumo-2</string>
<string name="lbl_add_child">Add Child</string>
<string name="lbl_luqman_khan">Luqman Khan</string>
<string name="msg_vaccination_det">Vaccination Details</string>
<string name="msg_khuda_bakhsh_go">Khuda Bakhsh Goth</string>
<string name="msg_fear_of_fever_a">Fear of fever after vaccine administration</string>
<string name="lbl_pneumo_1">Pneumo-1</string>
<string name="lbl_male">Male</string>
<string name="msg_align_qr_code_w">Align QR code with the frame to scan</string>
<string name="msg_conduct_follow">Conduct Follow-Up</string>
<string name="lbl_mohammad_omar">Mohammad Omar</string>
<string name="lbl_view_on_map">View on Map</string>
<string name="lbl_select">Select</string>
<string name="lbl_f">F</string>
<string name="msg_mobillization_t">Mobillization Tasks</string>
<string name="lbl_block_12">Block-12</string>
<string name="lbl_white_mosque">White Mosque</string>
<string name="lbl_widowed">Widowed</string>
<string name="msg_not_aware_of_va">Not aware of vaccination schedule</string>
<string name="lbl_date">Date *</string>
<string name="lbl_yes_now">Yes, Now</string>
<string name="lbl_add_child2">ADD CHILD</string>
<string name="lbl_bcg">BCG</string>
<string name="lbl_gender">Gender</string>
<string name="lbl_history">History</string>
<string name="msg_mobilization_ta">Mobilization Tasks</string>
<string name="msg_filter_tasks_li">Filter Tasks List</string>
<string name="lbl_123">123</string>
<string name="msg_search_by_detai">Search by details</string>
<string name="lbl_04_11_2019">04/11/2019</string>
<string name="lbl_fariha_ali">Fariha Ali</string>
<string name="lbl_15_months">15 months</string>
<string name="msg_landmark_optio">Landmark (optional)</string>
<string name="msg_child_vaccinati">Child Vaccination Task</string>
<string name="lbl_ipv">IPV</string>
<string name="lbl_gps_location">GPS Location</string>
<string name="msg_vaccination_car">Vaccination Card</string>
<string name="lbl_gharibabad">Gharibabad</string>
<string name="lbl_30">30</string>
<string name="msg_in_block_12_re">in Block 12, Rehri Goth</string>
<string name="lbl_complete_task">COMPLETE TASK</string>
<string name="lbl_password">Password*</string>
<string name="msg_edit_structure">Edit Structure Profile</string>
<string name="lbl_select_date">Select Date</string>
<string name="lbl_child_details">Child Details</string>
<string name="msg_not_willing_to">Not willing to visit facility</string>
<string name="lbl_unvaccinated">Unvaccinated</string>
<string name="lbl_shift_out">Shift out</string>
<string name="lbl_gujro">Gujro</string>
<string name="lbl_20">20</string>
<string name="lbl_23">23</string>
<string name="msg_number_of_alive">Number of alive children (under 5)</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="lbl_complete_action">COMPLETE ACTION</string>
<string name="lbl_22">22</string>
<string name="lbl_age">Age</string>
<string name="lbl_27">27</string>
<string name="lbl_qr_id">QR ID</string>
<string name="lbl_28">28</string>
<string name="lbl_barki_pakhtoon">Barki Pakhtoon</string>
<string name="lbl_rota">Rota</string>
<string name="lbl_25">25</string>
<string name="msg_14_nov_at_2_00">14 Nov at 2:00 PM</string>
<string name="lbl_26">26</string>
<string name="lbl_29">29</string>
<string name="msg_number_of_alive2">Number of Alive Children (under 5)</string>
<string name="lbl_female">Female</string>
<string name="lbl_image_stored">Image Stored!</string>
<string name="lbl_child">CHILD</string>
<string name="lbl_select_actions">Select Actions</string>
<string name="lbl_yes">YES</string>
<string name="lbl_fri_aug_06">Fri, Aug 06</string>
<string name="msg_vaccination_rec">Vaccination Record</string>
<string name="msg_vaccination_rea">Vaccination Reasons</string>
<string name="lbl_12">12</string>
<string name="lbl_vr_id_89389304">VR-ID 89389304</string>
<string name="lbl_13">13</string>
<string name="lbl_add_woman2">Add Woman</string>
<string name="lbl_dawar_pakhtoon">Dawar Pakhtoon</string>
<string name="lbl_woman">WOMAN</string>
<string name="lbl_10">10</string>
<string name="lbl_11">11</string>
<string name="lbl_16">16</string>
<string name="lbl_17">17</string>
<string name="lbl_penta_2">Penta-2</string>
<string name="lbl_14">14</string>
<string name="lbl_apply_filter">APPLY FILTER</string>
<string name="lbl_penta_3">Penta-3</string>
<string name="lbl_15">15</string>
<string name="lbl_add_woman">ADD WOMAN</string>
<string name="lbl_penta_1">Penta-1</string>
<string name="lbl_koohi_goth">Koohi Goth</string>
<string name="lbl_18">18</string>
<string name="lbl_19">19</string>
<string name="msg_block_5_abc_mo">Block 5, ABC Mohalla</string>
<string name="lbl_skip">SKIP</string>
<string name="lbl_submit">SUBMIT</string>
<string name="lbl_age_23_years">Age 23 Years</string>
<string name="lbl_done">DONE</string>
<string name="msg_structure_14_b">Structure 14, Block 12, ABC Mohalla</string>
<string name="lbl_vaccinator2">Vaccinator</string>
<string name="lbl_child_1">Child 1</string>
<string name="lbl_gujrati">Gujrati</string>
<string name="lbl_09">09</string>
<string name="lbl_1_profile_found">1 Profile found</string>
<string name="lbl_opv">OPV</string>
<string name="msg_vaccination_ser">Vaccination service is not available </string>
<string name="msg_would_you_like">Would you like capture an image of the vaccination card?</string>
<string name="lbl_zero_dose">Zero dose</string>
<string name="lbl_14_weeks">14 weeks</string>
<string name="lbl_9_months">9 months</string>
<string name="lbl_mohalla2">Mohalla*</string>
<string name="lbl_step_2_of_2">Step 2 of 2</string>
<string name="lbl_sindhi">Sindhi</string>
<string name="lbl_select_reason">Select reason</string>
<string name="lbl_ok">OK</string>
<string name="lbl_tori_pakhtoon">Tori Pakhtoon</string>
<string name="lbl_search_profile">Search Profile</string>
<string name="lbl_structure_12">Structure 12</string>
<string name="lbl_structure_13">Structure 13</string>
<string name="lbl_structure_10">Structure 10</string>
<string name="lbl_structure_11">Structure 11</string>
<string name="lbl_structure_14">Structure 14</string>
<string name="msg_caregiver_is_bu2">Caregiver is busy in day-to-day activities</string>
<string name="lbl_back">Back</string>
<string name="lbl_next">NEXT</string>
<string name="lbl_divorced">Divorced</string>
<string name="lbl_no">No</string>
<string name="lbl_ag584901">AG584901</string>
<string name="lbl_family_refused">Family Refused</string>
<string name="msg_vaccine_hesitan">Vaccine hesitancy</string>
<string name="lbl2">|</string>
<string name="lbl_reason">Reason *</string>
<string name="lbl_home">Home</string>
<string name="lbl_add_structure">Add Structure</string>
<string name="msg_select_reason_f">Select reason for unvaccinated</string>
<string name="lbl_select_mohalla">Select Mohalla</string>
<string name="lbl_husband_name">Husband Name*</string>
<string name="lbl_family_profile">Family Profile</string>
<string name="msg_successfully_sc">Successfully Scanned!</string>
<string name="lbl_search_by_vr_id">Search by VR-ID</string>
<string name="lbl_address2">Address*</string>
<string name="lbl_573947392929">573947392929</string>
<string name="msg_the_image_for_v">The image for vaccination card been stored into our system</string>
<string name="lbl_refusal_bin">Refusal Bin</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_landmark">Landmark</string>
<string name="msg_is_the_family_w">Is the family willing to vaccinate this child?</string>
<string name="lbl_okay">OKAY</string>
<string name="lbl_scan_qr_code">Scan QR Code</string>
<string name="msg_would_you_like2">Would you like to scan QR code for this child\u2019s vaccination record?</string>
<string name="lbl_farwa_khan">Farwa Khan</string>
<string name="lbl_mother_vr_id">Mother VR-ID</string>
<string name="lbl_add_structure2">ADD STRUCTURE</string>
<string name="lbl_edd_7_6_2020">EDD 7/6/2020</string>
<string name="lbl_vr_id_ag202519">VR-ID AG202519</string>
<string name="lbl_cancel">CANCEL</string>
<string name="lbl_jamali_goth">Jamali Goth</string>
<string name="lbl_yes_later">Yes, Later</string>
<string name="lbl_scan_qr_code2">SCAN QR CODE</string>
<string name="msg_sina_file_numbe2">SINA File Number*</string>
<string name="msg_children_inform">Children Information</string>
<string name="lbl_3_8_19">3/8/19</string>
<string name="lbl_block_122">Block 12</string>
<string name="lbl_mohsin_ahmad">Mohsin Ahmad</string>
<string name="lbl_10_10_2019">10/10/2019</string>
<string name="lbl_sign_out">Sign Out</string>
<string name="lbl_save_changes">SAVE CHANGES</string>
<string name="msg_standard_follow">Standard Follow-Up Task</string>
<string name="lbl_step_1_of_2">Step 1 of 2</string>
<string name="lbl_step_1_of_3">Step 1 of 3</string>
<string name="msg_reason_for_unva">Reason for Unvaccinated</string>
<string name="msg_vr_chw_selected">VR-CHW selected structure locked</string>
<string name="lbl_mother_name">Mother Name</string>
<string name="msg_fully_vaccinate">Fully vaccinated</string>
<string name="msg_no_profile_matc">No profile matches the search criteria</string>
<string name="lbl_sync">Sync</string>
<string name="lbl_6_weeks">6 weeks</string>
<string name="lbl_child_profile">Child Profile</string>
<string name="msg_sina_file_numbe">SINA File Number</string>
<string name="lbl_pregnant">Pregnant</string>
<string name="msg_father_is_not_a">Father is not available</string>
<string name="msg_no_profile_foun">No Profile Found</string>
<string name="lbl_0331_4948203">0331-4948203</string>
<string name="lbl_cnic">CNIC</string>
<string name="lbl_refusal_tasks">Refusal Tasks</string>
<string name="msg_edit_vaccinatio2">Edit Vaccination Details</string>
<string name="lbl_filter">Filter</string>
<string name="msg_fear_of_pain_re">Fear of pain related to needle</string>
<string name="lbl_01_08_2000">01/08/2000</string>
<string name="msg_search_structur">Search Structure</string>
<string name="lbl_current_address">Current Address</string>
<string name="msg_partially_vacci">Partially Vaccinated</string>
<string name="msg_enter_child_inf">Enter child information</string>
<string name="msg_search_by_name">Search by Name or VR-ID</string>
<string name="lbl_deceased">Deceased</string>
<string name="msg_abc_mohallla_b">ABC Mohallla, Block-12</string>
<string name="lbl_rehri_goth">Rehri Goth</string>
<string name="msg_source_of_infor">Source of Information*</string>
<string name="msg_women_of_reprod">Women of Reproductive Age</string>
<string name="msg_vaccination_tas">Vaccination Task List</string>
<string name="msg_structure_10_ad">Structure 10 Added</string>
<string name="lbl_shahzain_ali">Shahzain Ali</string>
<string name="msg_qr_code_permiss">QR Code Permission</string>
<string name="lbl_shazia_ali">Shazia Ali</string>
<string name="lbl_2_years">2 years</string>
<string name="lbl_address">Address</string>
</resources>